It's good on mobile, let's fix desktop

--- a/style.scss
+++ b/style.scss
@@ -315,13 +315,12 @@ footer {
   .wrapper {
     width: 1000px;
   }
-  .img-info {
-    width: 70%;
-    float: right;
-  }
   .img-me {
-    padding-top: 0px;
     width: 30%;
     float: left;
+  }
+  .img-info p {
+    width: 70%;
+    float: right;
   }
 }
